--- a/index.html
+++ b/index.html
@@ -7,356 +7,50 @@
     <title>Varendra University</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Bootstrap 3.3.7 -->
+    <link rel="stylesheet" href="styles2.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet"
-        href="http://202.5.52.152:8081/assets/bower_components/font-awesome/css/font-awesome.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/bower_components/Ionicons/css/ionicons.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/dist/css/skins/skin-blue.min.css">
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/css/custom.css">
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/dist/jquery/jquery-ui.min.css">
-    <link href="http://202.5.52.152:8081/img/favicon.ico" rel="shortcut icon" />
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
     <!-- Google Font -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-
-    <script src="http://202.5.52.152:8081/assets/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="http://202.5.52.152:8081/assets/dist/js/jquery.1.11.1.min.js"></script>
-    <script src="http://202.5.52.152:8081/assets/dist/js/jquery-ui.min.js"></script>
-
-
-
+    <script defer src="/script.js"></script>
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini">
-    <div class="wrapper">
-
-        <!-- Main Header -->
-        <header class="main-header">
-
-            <!-- Logo -->
-            <a href="index.html" class="logo">
-                <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>VU</b></span>
-                <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>Varendra</b></span>
-            </a>
-
-            <!-- Header Navbar -->
-            <nav class="navbar navbar-static-top" role="navigation">
-                <!-- Sidebar toggle button-->
-                <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                    <span class="sr-only">Toggle navigation</span>
-                </a>
-                <!-- Navbar Right Menu -->
-                <div class="navbar-custom-menu">
-                    <ul class="nav navbar-nav">
-
-                        <li><a href="http://202.5.52.152:8081/login/logout"><i class="fa fa-sign-out"></i> Sign out</a>
-                        </li>
-                        <!-- Tasks Menu -->
-
-                        <li class="dropdown user user-menu">
-                            <!-- Menu Toggle Button -->
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <!-- The user image in the navbar-->
-                                <img src="/dp.jpg" class="user-image" alt="User Image">
-                                <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                                <span class="hidden-xs">Md. Sayeed Hasan</span>
-                            </a>
-
-                            <ul class="dropdown-menu">
-                                <!-- User image -->
-                                <li class="user-header">
-                                    <img alt="User Image" class="img-circle" src="/dp.jpg">
-                                    <p>
-                                        Md. Sayeed Hasan </p>
-                                </li>
-                                <!-- Menu Body -->
-                                <!-- Menu Footer-->
-                                <li class="user-footer">
-                                    <div class="pull-left">
-                                        <a class="btn btn-default btn-flat" href="#">Cahnge Password</a>
-                                    </div>
-                                    <div class="pull-right">
-                                        <a class="btn btn-info btn-flat" href="/login.html">Sign out</a>
-                                    </div>
-                                </li>
-                            </ul>
-
-                        </li>
-
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        <!-- Left side column. contains the logo and sidebar -->
-        <aside class="main-sidebar">
-
-            <!-- sidebar: style can be found in sidebar.less -->
-            <section class="sidebar">
-
-                <!-- Sidebar user panel (optional) -->
-                <div class="user-panel">
-                    <div class="pull-left image">
-                        <img src="/dp.jpg" class="img-circle" alt="User Image">
-                    </div>
-                    <div class="pull-left info">
-                        <p>Md. Sayeed Hasan</p>
-                        <!-- Status -->
-                    </div>
-                </div>
-
-                <!-- Sidebar Menu -->
-                <ul data-widget="tree" class="sidebar-menu tree">
-                    <li class="header">Main Navigation</li>
-                    <li><a href="#"><i class="fa fa-user"></i> <span>Profile</span></a></li>
-                    <li><a href="#"><i class="fa fa-ticket"></i> <span>Admit
-                                Card</span></a></li>
-                    <li><a href="/payment.html"><i class="fa fa-money"></i>
-                            <span>Payment History</span></a></li>
-                    <li><a href="/index.html"><i class="fa fa-archive"></i>
-                            <span>Results</span></a></li>
-                    <li><a href="#"><i class="fa fa-archive"></i>
-                            <span>Waiver Application</span></a></li>
-                    <!--li><a href="#"><i class="fa fa-registered"></i> <span>Registration Details</span></a></li-->
-                    <li><a href="#"><i class="fa fa-check-square"></i>
-                            <span>Assess Teacher</span></a></li>
-                    <!--li><a href="#"><i class="fa fa-question-circle"></i> <span>Query/Application</span></a></li-->
-                    <li class="treeview menu-close" style="height: auto;">
-                        <a href="#"><i class="fa fa-link"></i> <span>Apply for Academic Documents</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu" style="display: none;">
-                            <li><a href="#">Apply</a></li>
-                            <li><a href="#">Application List</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <!-- /.sidebar-menu -->
-            </section>
-            <!-- /.sidebar -->
-        </aside>
-        <!-- Content Wrapper. Contains page content -->
-
-
-
-        <div class="content-wrapper" style="min-height: 608px;">
-            <section class="content-header">
-                <h1>Semester Results (181011072)</h1>
-            </section>
-
-            <section class="content text-center">
-
-
-                <div id="semesterResult">
-
-                </div>
-
-                <div class="row" id="studentResult">
-                    <div class="col-md-12">
-                        <div class="box box-primary">
-                            <div class="box-body box-profile">
-
-                                <table class="table table-bordered compact dataTable student_payment table-striped">
-                                    <thead>
-                                        <tr class="vubg">
-                                            <td>Semester</td>
-                                            <td>Total Credit</td>
-                                            <td>Earned Credit</td>
-                                            <td>GPA</td>
-                                            <td>Grade</td>
-                                            <td>View Transcript</td>
-                                        </tr>
-                                    </thead>
-
-                                    <tbody>
-                                        <tr>
-                                            <td>1st</td>
-                                            <td>9</td>
-                                            <td>9</td>
-                                            <td>2.92</td>
-                                            <td>B-</td>
-                                            <td><a href="#" onclick="show_transcript('1st')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>2nd</td>
-                                            <td>9</td>
-                                            <td>9</td>
-                                            <td>2.75</td>
-                                            <td>B-</td>
-                                            <td><a href="#" onclick="show_transcript('2nd')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>3rd</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>2.10</td>
-                                            <td>D</td>
-                                            <td><a href="#" onclick="show_transcript('3rd')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>4th</td>
-                                            <td>8</td>
-                                            <td>8</td>
-                                            <td>3.28</td>
-                                            <td>B+</td>
-                                            <td><a href="#" onclick="show_transcript('4th')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>5th</td>
-                                            <td>9</td>
-                                            <td>9</td>
-                                            <td>2.92</td>
-                                            <td>B-</td>
-                                            <td><a href="#" onclick="show_transcript('5th')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>6th</td>
-                                            <td>10</td>
-                                            <td>10</td>
-                                            <td>3.03</td>
-                                            <td>B</td>
-                                            <td><a href="#" onclick="show_transcript('6th')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>7th</td>
-                                            <td>9</td>
-                                            <td>9</td>
-                                            <td>2.92</td>
-                                            <td>B-</td>
-                                            <td><a href="#" onclick="show_transcript('7th')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>8th</td>
-                                            <td>12</td>
-                                            <td>12</td>
-                                            <td>2.56</td>
-                                            <td>C+</td>
-                                            <td><a href="#" onclick="show_transcript('8th')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>9th</td>
-                                            <td>13</td>
-                                            <td>13</td>
-                                            <td>2.38</td>
-                                            <td>C</td>
-                                            <td><a href="#" onclick="show_transcript('9th')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>10th</td>
-                                            <td>12</td>
-                                            <td>12</td>
-                                            <td>2.75</td>
-                                            <td>B-</td>
-                                            <td><a href="#" onclick="show_transcript('10th')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>11th</td>
-                                            <td>12</td>
-                                            <td>12</td>
-                                            <td>2.69</td>
-                                            <td>C+</td>
-                                            <td><a href="#" onclick="show_transcript('10th')">View Transcript</a></td>
-                                        </tr>
-                                        <tr>
-                                            <td>12th</td>
-                                            <td>12</td>
-                                            <td colspan="4" style="color:red !important; text-align:center">Payment
-                                                Pending</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+<body class="hold-transition login-page">
+    <div class="login-box">
+        <div class="login-logo">
+            <a href="../../index2.html"><b>Varendra University</b></a>
         </div>
+        <!-- /.login-logo -->
+        <div class="login-box-body">
+            <p class="login-box-msg">Sign in to start your session</p>
 
+            <form id="loginForm">
+                <div class="form-group has-feedback">
+                    <input id="username" name="student_id" type="text" class="form-control" placeholder="Student Id">
+                </div>
+                <div class="form-group has-feedback">
+                    <input id="password" name="password" type="password" class="form-control" placeholder="Password">
+                </div>
+                <div class="row">
+                    <div class="col-xs-12">
+                        <button name="submit" type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+                    </div>
+                    <!-- /.col -->
+                </div>
 
-        <script>
-            function show_transcript(semester) {
-                var base_url = "http://202.5.52.152:8081/";
-                var student = "181011072";
-                $.ajax({
-                    type: "POST",
-                    url: base_url + "student/show_semester_transcript/" + student + "/" + semester,
-                    success: function (result) {
-                        $("#semesterResult").html("");
-                        $("#semesterResult").append(result).hide().slideDown(1000);
-                        // $("#studentResult").slideDown();
+                <div class="row" style="margin-top: 15px">
+                    <div class="col-xs-12">
+                        <a href="" class="btn btn-warning btn-block btn-flat">Forgot Password?</a>
+                    </div>
+                    <!-- /.col -->
+                </div>
+            </form>
 
-                    }
-                });
-            }
-        </script>
-
-
-
-
-
-        <!-- /.content-wrapper -->
-
-        <!-- Main Footer -->
-        <footer class="main-footer">
-            <!-- To the right -->
-            <div class="pull-right hidden-xs">
-
-            </div>
-            <!-- Default to the left -->
-            <strong>Copyright &copy; 2016 <a href="#">Company</a>.</strong> All rights reserved.
-        </footer>
-        <div class="control-sidebar-bg"></div>
+        </div>
+        <!-- /.login-box-body -->
     </div>
-    <!-- ./wrapper -->
-
-    <!-- REQUIRED JS SCRIPTS -->
-
-
-    <!-- Bootstrap 3.3.7 -->
-    <script src="http://202.5.52.152:8081/assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- DataTables -->
-    <script src="http://202.5.52.152:8081/assets/bower_components/datatables.net/js/jquery.dataTables.min.js"></script>
-    <script
-        src="http://202.5.52.152:8081/assets/bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
-    <!-- SlimScroll -->
-    <script src="http://202.5.52.152:8081/assets/bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-    <!-- FastClick -->
-    <script src="http://202.5.52.152:8081/assets/bower_components/fastclick/lib/fastclick.js"></script>
-    <!-- AdminLTE App -->
-    <script src="http://202.5.52.152:8081/assets/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="http://202.5.52.152:8081/assets/dist/js/demo.js"></script>
     <script src="https://kit.fontawesome.com/fca4d6e7b4.js" crossorigin="anonymous"></script>
-    <!-- page script -->
-    <script>
-        $(function () {
-            $('#example1').DataTable()
-            $('#example2').DataTable({
-                'paging': true,
-                'lengthChange': false,
-                'searching': false,
-                'ordering': true,
-                'info': true,
-                'autoWidth': false
-            })
-        })
-    </script>
 </body>
 
 </html>
