changes made further

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="./styles2.css">
     <!-- Font Awesome -->
     <!-- Google Font -->
     <link rel="stylesheet"
@@ -19,7 +19,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="../../index2.html"><b>Varendra University</b></a>
+            <a href="./result.html"><b>Varendra University</b></a>
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
