--- a/payment.html
+++ b/payment.html
@@ -31,7 +31,7 @@
     <!-- Google Font -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-
+    <link rel="stylesheet" href="./styles2.css">
     <script src="http://202.5.52.152:8081/assets/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="http://202.5.52.152:8081/assets/dist/js/jquery.1.11.1.min.js"></script>
     <script src="http://202.5.52.152:8081/assets/dist/js/jquery-ui.min.js"></script>
@@ -44,7 +44,7 @@
         <header class="main-header">
 
             <!-- Logo -->
-            <a href="result.html" class="logo">
+            <a href="./result.html" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>VU</b></span>
                 <!-- logo for regular state and mobile devices -->
