--- a/result.html
+++ b/result.html
@@ -19,13 +19,14 @@
     <link rel="stylesheet" href="http://202.5.52.152:8081/assets/css/custom.css">
     <link rel="stylesheet" href="http://202.5.52.152:8081/assets/dist/jquery/jquery-ui.min.css">
     <link href="http://202.5.52.152:8081/img/favicon.ico" rel="shortcut icon" />
-
+    <link rel="stylesheet" href="./styles2.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+
 
     <!-- Google Font -->
     <link rel="stylesheet"
@@ -46,7 +47,7 @@
         <header class="main-header">
 
             <!-- Logo -->
-            <a href="result.html" class="logo">
+            <a href="./result.html" class="logo">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>VU</b></span>
                 <!-- logo for regular state and mobile devices -->
@@ -71,7 +72,7 @@
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
-                                <img src="/dp.jpg" class="user-image" alt="User Image">
+                                <img src="./dp.jpg" class="user-image" alt="User Image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span class="hidden-xs">Md. Sayeed Hasan</span>
                             </a>
@@ -79,7 +80,7 @@
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
-                                    <img alt="User Image" class="img-circle" src="/dp.jpg">
+                                    <img alt="User Image" class="img-circle" src="./dp.jpg">
                                     <p>
                                         Md. Sayeed Hasan </p>
                                 </li>
@@ -90,7 +91,7 @@
                                         <a class="btn btn-default btn-flat" href="#">Cahnge Password</a>
                                     </div>
                                     <div class="pull-right">
-                                        <a class="btn btn-info btn-flat" href="/result.html">Sign out</a>
+                                        <a class="btn btn-info btn-flat" href="./result.html">Sign out</a>
                                     </div>
                                 </li>
                             </ul>
@@ -110,7 +111,7 @@
                 <!-- Sidebar user panel (optional) -->
                 <div class="user-panel">
                     <div class="pull-left image">
-                        <img src="/dp.jpg" class="img-circle" alt="User Image">
+                        <img src="./dp.jpg" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
                         <p>Md. Sayeed Hasan</p>
@@ -124,9 +125,9 @@
                     <li><a href="#"><i class="fa fa-user"></i> <span>Profile</span></a></li>
                     <li><a href="#"><i class="fa fa-ticket"></i> <span>Admit
                                 Card</span></a></li>
-                    <li><a href="/payment.html"><i class="fa fa-money"></i>
+                    <li><a href="./payment.html"><i class="fa fa-money"></i>
                             <span>Payment History</span></a></li>
-                    <li><a href="/result.html"><i class="fa fa-archive"></i>
+                    <li><a href="./result.html"><i class="fa fa-archive"></i>
                             <span>Results</span></a></li>
                     <li><a href="#"><i class="fa fa-archive"></i>
                             <span>Waiver Application</span></a></li>
