--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <button name="submit" type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+                        <button name="submit" id="sign-in-btn" class="btn btn-primary btn-block btn-flat">Sign
+                            In</button>
                     </div>
                     <!-- /.col -->
                 </div>
