--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="login-box-body">
             <p class="login-box-msg">Sign in to start your session</p>
 
-            <form id="loginForm">
+            <div id="loginForm">
                 <div class="form-group has-feedback">
                     <input id="username" name="student_id" type="text" class="form-control" placeholder="Student Id">
                 </div>
@@ -46,7 +46,7 @@
                     </div>
                     <!-- /.col -->
                 </div>
-            </form>
+            </div>
 
         </div>
         <!-- /.login-box-body -->
