realised my mistake 5

--- a/payment.html
+++ b/payment.html
@@ -61,7 +61,7 @@
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
 
-                        <li><a href="/result.html"><i class="fa fa-sign-out"></i> Sign out</a>
+                        <li><a href="./result.html"><i class="fa fa-sign-out"></i> Sign out</a>
                         </li>
                         <!-- Tasks Menu -->
 
@@ -69,7 +69,7 @@
                             <!-- Menu Toggle Button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <!-- The user image in the navbar-->
-                                <img src="/dp.jpg" class="user-image" alt="User Image">
+                                <img src="./dp.jpg" class="user-image" alt="User Image">
                                 <!-- hidden-xs hides the username on small devices so only the image appears. -->
                                 <span class="hidden-xs">Md. Sayeed Hasan</span>
                             </a>
@@ -77,7 +77,7 @@
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header">
-                                    <img alt="User Image" class="img-circle" src="/dp.jpg">
+                                    <img alt="User Image" class="img-circle" src="./dp.jpg">
                                     <p>
                                         Md. Sayeed Hasan </p>
                                 </li>
@@ -88,7 +88,7 @@
                                         <a class="btn btn-default btn-flat" href="#">Cahnge Password</a>
                                     </div>
                                     <div class="pull-right">
-                                        <a class="btn btn-info btn-flat" href="/result.html">Sign out</a>
+                                        <a class="btn btn-info btn-flat" href="./result.html">Sign out</a>
                                     </div>
                                 </li>
                             </ul>
@@ -121,9 +121,9 @@
                     <li><a href="#"><i class="fa fa-user"></i> <span>Profile</span></a></li>
                     <li><a href="#"><i class="fa fa-ticket"></i> <span>Admit
                                 Card</span></a></li>
-                    <li><a href="/payment.html"><i class="fa fa-money"></i>
+                    <li><a href="./payment.html"><i class="fa fa-money"></i>
                             <span>Payment History</span></a></li>
-                    <li><a href="result.html"><i class="fa fa-archive"></i>
+                    <li><a href="./result.html"><i class="fa fa-archive"></i>
                             <span>Results</span></a></li>
                     <li><a href="#"><i class="fa fa-archive"></i>
                             <span>Waiver Application</span></a></li>
