--- a/result.html
+++ b/result.html
@@ -7,36 +7,12 @@
     <title>Varendra University</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet"
-        href="http://202.5.52.152:8081/assets/bower_components/font-awesome/css/font-awesome.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/bower_components/Ionicons/css/ionicons.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/dist/css/skins/skin-blue.min.css">
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/css/custom.css">
-    <link rel="stylesheet" href="http://202.5.52.152:8081/assets/dist/jquery/jquery-ui.min.css">
-    <link href="http://202.5.52.152:8081/img/favicon.ico" rel="shortcut icon" />
+    <link href="./favicon.ico" rel="shortcut icon" />
     <link rel="stylesheet" href="./styles2.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
 
     <!-- Google Font -->
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-
-    <script src="http://202.5.52.152:8081/assets/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="http://202.5.52.152:8081/assets/dist/js/jquery.1.11.1.min.js"></script>
-    <script src="http://202.5.52.152:8081/assets/dist/js/jquery-ui.min.js"></script>
-
-
 
 </head>
 
@@ -64,7 +40,7 @@
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
 
-                        <li><a href="http://202.5.52.152:8081/login/logout"><i class="fa fa-sign-out"></i> Sign out</a>
+                        <li><a href="./index.html"><i class="fa fa-sign-out"></i> Sign out</a>
                         </li>
                         <!-- Tasks Menu -->
 
@@ -327,8 +303,7 @@
     <!-- ./wrapper -->
 
     <!-- REQUIRED JS SCRIPTS -->
-
-
+    <script src="./complexScript.js"></script>
     <!-- Bootstrap 3.3.7 -->
     <script src="http://202.5.52.152:8081/assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- DataTables -->
